feat: add get project list api
